add block changes to team activities

--- a/ponder/team01.html
+++ b/ponder/team01.html
@@ -22,7 +22,7 @@
         <h2>Overview</h2>
         <p>
           This activity will aid you in getting the project and environment
-          setup for your team. It will introduce a NodeJs based workflow and
+          setup for your team. It will introduce a NodeJS based workflow and
           development/build tools.
         </p>
         <h2>Instructions</h2>
@@ -52,7 +52,7 @@
           <a
             href="https://guides.github.com/activities/hello-world/"
             target="_blank"
-            >shorter Github guide</a
+            >shorter GitHub guide</a
           >
           or this
           <a
@@ -79,7 +79,7 @@
                 <li>
                   The driver should visit the Team's copy of the project Trello
                   board and add each team member to the "Setup project for all
-                  team members" task. Then move it to "Doing"
+                  team members" task. Then move it to "Doing".
                 </li>
                 <li>
                   Make sure that you are familiar with how to use the command
@@ -103,7 +103,7 @@
                   if you need a review.
                 </li>
                 <li>
-                  The driver for this week should then log into Github, and
+                  The driver for this week should then log into GitHub, and
                   visit this
                   <a href="https://github.com/matkat99/sleepoutside"
                     >repository</a
@@ -115,7 +115,7 @@
                 <li>
                   The driver should then goto Settings->Manage Access and add
                   the rest of the team members as collaborators. (Each team
-                  member needs to have their own Github account for this step.
+                  member needs to have their own GitHub account for this step.
                   Create one if you do not have one.)
                 </li>
                 <li>
@@ -269,9 +269,9 @@
                 <li>
                   The driver should run <kbd>npm run build</kbd>. This will
                   create a directory called <kbd>build</kbd>. Commit those
-                  changes and push them to Github. Then go back to the
+                  changes and push them to GitHub. Then go back to the
                   repository at <kbd>github.com</kbd> and go to settings. Scroll
-                  down the page until you see the section for Github Pages.
+                  down the page until you see the section for GitHub Pages.
                   Select <kbd>Branch: main</kbd> in the source dropdown. Leave
                   the directory at <kbd>/(root)</kbd>. Notice the URL to your
                   published site at the top of that section. Add a
@@ -294,13 +294,13 @@
             </li>
             <li>
               <!-- BEGIN STEP -->
-              <p>Github with a team</p>
+              <p>GitHub with a team</p>
               <ol>
                 <li>
                   The driver should create a file in the root of the project
                   called <kbd>team.txt</kbd> and add the link to the team Trello
                   board, and their name. Then commit that change, and push it up
-                  to Github.
+                  to GitHub.
                 </li>
                 <li>
                   Each other member of the team should pull the changes down and
@@ -354,7 +354,7 @@
                     <figure>
                       <img
                         src="../images/330-merge-confilict.PNG"
-                        alt="merge error from Github"
+                        alt="merge error from GitHub"
                       />
                     </figure>
                   </div>
@@ -362,10 +362,10 @@
                     We must decide which code should be kept. The code under the
                     <code><<<<<< HEAD</code> is the code you were just trying to
                     send up. The code under the <code>=========</code> is the
-                    code that was already in Github. If you want to keep the
+                    code that was already in GitHub. If you want to keep the
                     code you were just writing, and throw the other away you
                     could choose "Accept Current Change". If you wanted to keep
-                    what was on Github and remove your recent changes choose
+                    what was on GitHub and remove your recent changes choose
                     "Accept Incoming Changes". Or if you choose "Accept Both
                     Changes" it will smoosh both sets of changes together. This
                     is often the quickest way to get rid of the conflict, but is
@@ -379,7 +379,7 @@
                   <p>
                     Once you fix the code you will need to <kbd>commit</kbd> the
                     merge...then you will be able to <kbd>push</kbd> your
-                    changes to Github again.
+                    changes to GitHub again.
                   </p>
                   <p class="callout">
                     This was a simple merge…easy to see what we needed to
@@ -425,9 +425,9 @@
                   Add a file in the root of the project called
                   <kbd>yourname.txt</kbd>. Type your name in the file.
                 </li>
-                <li>Commit and publish (push) your branch to Github</li>
+                <li>Commit and publish (push) your branch to GitHub</li>
                 <li>
-                  Push your commit to Github...then do a pull after the other
+                  Push your commit to GitHub...then do a pull after the other
                   members of the team have all pushed their branches.
                 </li>
                 <li>
@@ -489,16 +489,16 @@
                   href="https://guides.github.com/activities/hello-world/#pr"
                   target="_blank"
                   >github.com</a
-                >) the driver should go to the repository in github and review
+                >) the driver should go to the repository in GitHub and review
                 the request and then finish the merge. Make sure that any extra
                 branches are deleted once you are done merging.
               </p>
-              <p>Move the card in Trello to "Done"</p>
+              <p>Move the card in Trello to "Done".</p>
               <!-- END STEP -->
             </li>
           </ol>
         </div>
-        <h2>Instructors Solution</h2>
+        <h2>Instructor's Solution</h2>
 
         <p>No instructor's solution this week.</p>
         <h2>Submission</h2>
