--- a/ponder/team06-block.html
+++ b/ponder/team06-block.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <title>BYU-Idaho WDD 330 | Team 6</title>
+    <title>BYU-Idaho WDD 330 | Individual 6</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
     <link rel="stylesheet" href="../css/course.css" />
@@ -17,18 +17,14 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Team 6 Activity</h1>
+        <h1>Ponder: Individual 6 Activity</h1>
         <hr />
         <h2>Overview</h2>
         <p>The next step for our site is to build out the checkout process.</p>
         <h2>Instructions</h2>
         <p>
-          Complete the following assignment as a team. Designate one team member
-          as the "main driver" and collaborate on their copy of the code.
-          Everyone on the team should be actively engaged in writing the code
-          and contributing to the solution. Once the solution is working, make
-          sure that everyone on the team gets a copy of the code. Each week let
-          someone else be the "main driver" of the coding.
+          Complete the following assignment individually. Each student will
+          write code for their own copy.
         </p>
 
         <div class="requirements">
@@ -37,16 +33,15 @@
             <li>
               <!-- BEGIN STEP -->
               <p>
-                The driver should visit the team's copy of the Trello board for
-                the project. Add each of the attending team members to the
-                "Team6: Checkout" task...then move it to 'Doing'. Read the
-                details of the card together.
+                Visit the team's copy of the Trello board for the project. Add
+                yourself to the "Individual6: Checkout" task...then move it to
+                'Doing'. Read the details of the card.
               </p>
               <p>
-                The driver should make sure to <kbd>pull</kbd> any changes from
-                Github before proceeding. Next they should create a new branch
-                called <kbd>initials--team6</kbd>. So if the driver's name were
-                John Doe the branch should be called <code>jd--team6</code>
+                Make sure to <kbd>pull</kbd> any changes from GitHub before
+                proceeding. Create a new branch called
+                <kbd>initials--individual6</kbd>. So if your name were John Doe
+                the branch should be called <code>jd--individual6</code>
               </p>
 
               <!-- END STEP -->
@@ -56,8 +51,8 @@
               <h3>The Cart</h3>
               <p>
                 Check your cart page to make sure that it is correctly
-                displaying a total. If it is not then someone in your group
-                should really complete that card in Trello. :)
+                displaying a total. If it is not then you should really complete
+                that card in Trello. :)
               </p>
               <p>
                 Add a <kbd>Checkout</kbd> button/link that will take us to the
@@ -417,24 +412,24 @@ function formDataToJSON(formElement) {
           </ol>
         </div>
 
-        <h2>Instructors Solution</h2>
+        <h2>Instructor's Solution</h2>
         <p>
-          As a part of this team activity, you are expected to look over a
+          As a part of this individual activity, you are expected to look over a
           solution from the instructor, to compare your approach to that one.
           One of the questions on the I-Learn submission will ask you to provide
           insights from this comparison.
         </p>
         <p>
           Please DO NOT open the solution until you have worked through this
-          activity as a team for the one hour period. At the end of the hour, if
-          you are still struggling with some of the core requirements, you are
-          welcome to view the instructor's solution and use it to help you
+          activity individually for the one hour period. At the end of the hour,
+          if you are still struggling with some of the core requirements, you
+          are welcome to view the instructor's solution and use it to help you
           complete your own code. Even if you use the instructor's code to help
           you, you are welcome to report that you finished the core
           requirements, if you code them up yourself.
         </p>
         <p>
-          After working with your team for the one hour activity,
+          After working individually for the one hour activity,
           <a
             href="https://github.com/matkat99/sleepoutside/tree/team6/src"
             target="_blank"
@@ -444,18 +439,20 @@ function formDataToJSON(formElement) {
         </p>
         <h2>Make a pull request.</h2>
         <p>
-          After you have completed what you can, and reviewed the instructor's
-          solution, the driver should commit and push their changes, then submit
-          a pull request for this branch. Then review the pull request as a
-          team, close it, and merge the branch back into Main. Finally someone
-          should move the Trello card to "Done".
+          After you have completed what you can, reviewed the instructor's
+          solution, and gotten your code working, commit and push your changes.
+          when you next meet with your team you should discuss with each other
+          which changes you would like to keep. You should only keep ONE
+          member's changes! Submit a pull request for the branch with the code
+          you have decided to keep. Then review the pull request, close it, and
+          merge the branch back into Main. Finally, move the Trello card to
+          "Done".
         </p>
         <h2>Submission</h2>
         <p>
           When you have finished this activity, please fill out the assessment
           in I-Learn. You are welcome to complete any additional parts of this
-          activity by yourself or with others after your meeting before
-          submitting the assessment.
+          activity before submitting the assessment.
         </p>
       </main>
       <!-- end #article -->
