--- a/ponder/team04-block.html
+++ b/ponder/team04-block.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <title>BYU-Idaho WDD 330 | Team</title>
+    <title>BYU-Idaho WDD 330 | Individual</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
     <link rel="stylesheet" href="../css/course.css" />
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Team 4 Activity</h1>
+        <h1>Ponder: Individual 4 Activity</h1>
         <hr />
         <h2>Overview</h2>
         <p>
@@ -26,20 +26,15 @@
         </p>
         <h2>Instructions</h2>
         <p>
-          Complete the following assignment as a team. Designate one team member
-          as the "main driver" and collaborate on their copy of the code.
-          Everyone on the team should be actively engaged in writing the code
-          and contributing to the solution. Once the solution is working, make
-          sure that everyone on the team gets a copy of the code. Each week let
-          someone else be the "main driver" of the coding.
+          Complete the following assignment individually. Each student will
+          write code for their own copy.
         </p>
         <p>
           There are many spots where code examples have been given. To get the
-          most out of this activity do not look at the examples until your group
-          has given that section a try. Then after you look at the example
-          resist the temptation to copy/paste. Use the examples to give
-          correction, or help you get unstuck...do not just use them to get it
-          done.
+          most out of this activity, do not look at the examples until you have
+          given that section a try. Then after you look at the example, resist
+          the temptation to copy/paste. Use the examples to get correction, or
+          help you get unstuck...do not just use them to get it done.
         </p>
 
         <div class="requirements">
@@ -48,16 +43,15 @@
             <li>
               <!-- BEGIN STEP -->
               <p>
-                The driver should visit the team's copy of the Trello board for
-                the project. Add each of the attending team members to the
-                "Team4: Dynamic header and footer" task...then move it to
-                'Doing'. Read the details of the card together.
+                Visit the team's copy of the Trello board for the project. Add
+                yourself to the "Individual4: Dynamic header and footer"
+                task...then move it to 'Doing'. Read the details of the card.
               </p>
               <p>
-                The driver should make sure to <kbd>pull</kbd> any changes from
-                Github before proceeding. Next they should create a new branch
-                called <kbd>initials--team4</kbd>. So if the driver's name were
-                John Doe the branch should be called <code>jd--team4</code>
+                Make sure to <kbd>pull</kbd> any changes from GitHub before
+                proceeding. Create a new branch called
+                <kbd>initials--individual4</kbd>. So if your name were John Doe
+                the branch should be called <code>jd--individual4</code>
               </p>
 
               <!-- END STEP -->
@@ -71,7 +65,7 @@
                 what they are, and another indicating some of the drawbacks to
                 them. At this point we need to decide if a Single Page
                 Application is the right architecture for our application.
-                Discuss with your group your feelings. You may want to pull up
+                Consider your feelings about the matter. You may want to pull up
                 the two articles (<a
                   href="https://blog.pshrmn.com/how-single-page-applications-work/"
                   target="_blank"
@@ -100,12 +94,12 @@
                 </li>
                 <li>
                   productList and productDetail are going to be mostly dynamic,
-                  so let's just generate those entirely through Javascript.
+                  so let's just generate those entirely through JavaScript.
                 </li>
                 <li>
                   cart and checkout will have more static content on them...so
-                  let's load in an html partial as a starting point, and then
-                  modify as needed with Javascript.
+                  let's load in an HTML partial as a starting point, and then
+                  modify as needed with JavaScript.
                 </li>
               </ul> -->
               <p>
@@ -239,7 +233,7 @@
                 Create another directory called <kbd>partials</kbd> (make sure
                 you put this in the <kbd>src</kbd> directory) and create two
                 files in it: <kbd>header.html</kbd> and <kbd>footer.html</kbd>.
-                Then copy the html from <em>inside</em> of the header and footer
+                Then copy the HTML from <em>inside</em> of the header and footer
                 elements from the src/index.html page into the respective file.
                 We should then add an id to the header and footer elements in
                 index. In the end for the header your code should look something
@@ -271,7 +265,7 @@
                 <code>renderListWithTemplate</code> function we wrote last week,
                 but will need to make some changes. We are only rendering one
                 template instead of a list. We also need to write a function to
-                request the html file with our header and footer, then create a
+                request the HTML file with our header and footer, then create a
                 <kbd>template</kbd> out of it.
               </p>
               <ol>
@@ -455,24 +449,24 @@ export async function loadTemplate(path) {
           </ol>
         </div>
 
-        <h2>Instructors Solution</h2>
+        <h2>Instructor's Solution</h2>
         <p>
-          As a part of this team activity, you are expected to look over a
+          As a part of this individual activity, you are expected to look over a
           solution from the instructor, to compare your approach to that one.
           One of the questions on the I-Learn submission will ask you to provide
           insights from this comparison.
         </p>
         <p>
           Please DO NOT open the solution until you have worked through this
-          activity as a team for the one hour period. At the end of the hour, if
-          you are still struggling with some of the core requirements, you are
-          welcome to view the instructor's solution and use it to help you
+          activity individually for the one hour period. At the end of the hour,
+          if you are still struggling with some of the core requirements, you
+          are welcome to view the instructor's solution and use it to help you
           complete your own code. Even if you use the instructor's code to help
           you, you are welcome to report that you finished the core
           requirements, if you code them up yourself.
         </p>
         <p>
-          After working with your team for the one hour activity,
+          After working individually for the one hour activity,
           <a
             href="https://github.com/matkat99/sleepoutside/tree/team4/src"
             target="_blank"
@@ -483,17 +477,19 @@ export async function loadTemplate(path) {
         <h2>Make a pull request.</h2>
         <p>
           After you have completed what you can, reviewed the instructor's
-          solution, and gotten your code working the driver should commit and
-          push their changes then submit a pull request for this branch. Then
-          review the pull request as a team, close it, and merge the branch back
-          into Main. Finally someone should move the Trello card to "Done".
+          solution, and gotten your code working, commit and push your changes.
+          when you next meet with your team you should discuss with each other
+          which changes you would like to keep. You should only keep ONE
+          member's changes! Submit a pull request for the branch with the code
+          you have decided to keep. Then review the pull request, close it, and
+          merge the branch back into Main. Finally, move the Trello card to
+          "Done".
         </p>
         <h2>Submission</h2>
         <p>
           When you have finished this activity, please fill out the assessment
           in I-Learn. You are welcome to complete any additional parts of this
-          activity by yourself or with others after your meeting before
-          submitting the assessment.
+          activity before submitting the assessment.
         </p>
       </main>
       <!-- end #article -->
